--- a/client/app/modules/login/login.html
+++ b/client/app/modules/login/login.html
@@ -1,9 +1,38 @@
 <!-- Todo View -->
-<form ng-submit="login()" ng-controller="LoginCtrl">				
-	<input type="text" placeholder="Username" ng-model="username" />
-	<input type="password" placeholder="Password" ng-model="password" />
-</form>
-
-<p>Not a user? <a ui-sref="signup">Sign up here.</a></p>
+<div class="container">
+	<div class="col-md-12">
+		<header id="main-title">
+			<h1>Project_Synergy</h1>
+		</header>
+		<form ng-submit="login()" ng-controller="LoginCtrl" id="login-form">			
+			<div class="form-group">
+				<div class="row">
+					<div class="col-md-4">
+						<label for="username">Username</label>
+					</div>
+					<div class="col-md-8">
+						<input type="text" placeholder="Username" ng-model="username" name="username"/>
+					</div>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="row">
+					<div class="col-md-4">
+						<label for="password">Password</label>
+					</div>
+					<div class="col-md-8">
+						<input type="password" placeholder="Password" ng-model="password" name="password"/>
+					</div>
+				</div>
+				</div>
+				
+			
+		</form>
+		
+		<div class="not-a-user">
+			<p>Not a user? <a ui-sref="signup" class="link beige">Sign up here.</a></p>
+		</div>
+	</div>
+</div>
 	
 
