Added node passport, refactored db_module.js file, more user login work, added error helper, dashboard module, and a few other minor changes.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -31,6 +31,7 @@
 	<script src="/modules/home/home.js"></script>	
 	<script src="/modules/signup/signup.js"></script>	
 	<script src="/modules/login/login.js"></script>	
+	<script src="/modules/dashboard/dashboard.js"></script>	
 
 
 	
