More coding on the user login feature.

--- a/client/app/modules/login/login.html
+++ b/client/app/modules/login/login.html
@@ -33,6 +33,10 @@
 				<span class="error" ng-show="login.loginForm.password.$error.minlength"> Password must be at least 5 characters in length.</span>
 				<span class="error" ng-show="login.loginForm.password.$error.required">Oops! Please enter a password.</span>
 			</div>
+
+			<fieldset>
+				<input type="submit" value="Login" class="btn"/>
+			</fieldset>
 			
 		</form>
 
