Fix some login syntax problems, fix some server.js syntax errors, and some other stuff I can't remember right now.

--- a/client/app/modules/login/login.html
+++ b/client/app/modules/login/login.html
@@ -2,10 +2,9 @@
 <div class="container">
 	<div class="col-md-12">
 		<header id="main-title">
-			<h1>Project_Synergy</h1>
-			
+			<h1>Project_Synergy</h1>			
 		</header>
-		<form ng-submit="login.login()" ng-controller="LoginCtrl" id="login-form" name="login.loginForm">			
+		<form ng-submit="login.login()" ng-controller="LoginCtrl" id="login-form" name="login.loginForm" novalidate>			
 			<div class="form-group">
 				<div class="row">
 					<div class="col-md-4">
@@ -22,13 +21,13 @@
 						<label for="password">Password</label>
 					</div>
 					<div class="col-md-8">
-						<input type="password" placeholder="Password" ng-model="login.password" name="password"/>
+						<input type="password" placeholder="Password" ng-model="login.password" name="password" />
 					</div>
 				</div>
 			</div>
 
 			<!-- password errors -->
-			<div class="error-container" ng-show="login.loginForm.password.$dirty && signup.signupForm.password.$invalid">
+			<div class="error-container" ng-show="login.loginForm.password.$dirty && login.signupForm.password.$invalid">
 				<!-- form error cases -->
 				<span class="error" ng-show="login.loginForm.password.$error.minlength"> Password must be at least 5 characters in length.</span>
 				<span class="error" ng-show="login.loginForm.password.$error.required">Oops! Please enter a password.</span>
