User login coding, and some other stuff.

--- a/client/app/modules/signup/signup.html
+++ b/client/app/modules/signup/signup.html
@@ -16,7 +16,7 @@
 							<label for="first-name">First Name</label>
 						</div>
 						<div class="col-md-8">
-							<input type="text" placeholder="First Name" name="first-name" ng-model="signup.firstName" required/>
+							<input type="text" placeholder="First Name" name="first_name" ng-model="signup.firstName" required/>
 						</div>
 					</div>
 				</div>
@@ -34,7 +34,7 @@
 							<label for="last-name">Last Name</label>
 						</div>
 						<div class="col-md-8">
-							<input type="text" placeholder="Last Name" name="lastName" ng-model="signup.lastName" required/>
+							<input type="text" placeholder="Last Name" name="last_name" ng-model="signup.lastName" required/>
 						</div>
 					</div>
 				</div>
