Login/logout now working. Add new cookie factory to retrieve session cookie. Authorization now works (does not allow user to access restricted pages unless logged in).

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -9,6 +9,7 @@
 	
 	<!-- main UI view -->	
 	<div ui-view></div>
+	<div ui-view="main"></div>
 
 	
 
@@ -17,6 +18,7 @@
 	<script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="https://code.angularjs.org/1.4.3/angular-resource.min.js"></script>
 	<script src="/bower_components/underscore/underscore-min.js"></script>
+	<script src="/bower_components/angular-cookies/angular-cookies.js"></script>
 	
 
 	<!-- global app.js -->	
@@ -26,6 +28,7 @@
 	<script src="/factories/FormFactory.js"></script>
 	<script src="/factories/UserFactory.js"></script>
 	<script src="/factories/UnderscoreFactory.js"></script>
+	<script src="/factories/CookieFactory.js"></script>
 	
 	<!-- controllers -->
 	<script src="/modules/home/home.js"></script>	
