--- a/client/app/modules/dashboard/dashboard.html
+++ b/client/app/modules/dashboard/dashboard.html
@@ -1,1 +1,7 @@
-<h1>Hello, {{user.first_name}}!</h1>
+<div class="container">
+	<div class="col-md-12">
+	<h1>Dashboard</h1>
+	<p>Welcome, {{dashboard.user.first_name}}!</p>	
+	<a class="btn" href="/logout">Logout</a>
+	</div>
+</div>
