Login/logout work before working on passing login credentials between states.

--- a/client/app/modules/dashboard/dashboard.html
+++ b/client/app/modules/dashboard/dashboard.html
@@ -1,7 +1,8 @@
 <div class="container">
+	<!--<ng-include src="../includes/header.html"></ng-include>-->
 	<div class="col-md-12">
-	<h1>Dashboard</h1>
-	<p>Welcome, {{dashboard.user.first_name}}!</p>	
-	<a class="btn" href="/logout">Logout</a>
+		<h1>Dashboard</h1>
+		<p>Welcome, {{dashboard.user.username}}!</p>	
+		<a class="btn" href="/logout">Logout</a>
 	</div>
 </div>
