--- a/client/app/index.html
+++ b/client/app/index.html
@@ -4,12 +4,12 @@
 	<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
 </head>
-<body>
+<body class="{{$state.current.name}}">
 
 	
 	<!-- main UI view -->	
 	<div ui-view></div>
-	<div ui-view="main"></div>
+	
 
 	
 
