--- a/client/app/modules/dashboard/dashboard.html
+++ b/client/app/modules/dashboard/dashboard.html
@@ -1,8 +1,5 @@
-<div class="container">
-	<!--<ng-include src="../includes/header.html"></ng-include>-->
-	<div class="col-md-12">
-		<h1>Dashboard</h1>
-		<p>Welcome, {{dashboard.user.username}}!</p>	
-		<a class="btn" href="/logout">Logout</a>
-	</div>
+<div class="dashboard">
+	<navigation></navigation>
+	<dashboard-main></dashboard-main>
 </div>
+
