--- a/client/app/modules/home/home.html
+++ b/client/app/modules/home/home.html
@@ -1,1 +1,7 @@
-<h1>Welcome to Mano's App</h1>
+<div class="container">
+	<div class="row">	
+		<div class="col-md-12">
+			<h1>Welcome to Mano's App</h1>
+		</div>
+	</div>
+</div>
