Major refactoring to authentication. Added new AuthService, new Session factory and global constants to app. Session service now being used to create session client side after authentication, on top of still using server sessions.  User information now being stored in topmost  (but not ), as opposed to storing user information inside  (user becomes null after changing states this way).

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,7 +14,7 @@
 	
 
 	<!-- external libraries -->
-	<script src="/bower_components/angular/angular.min.js"></script>
+	<script src="/bower_components/angular/angular.js"></script>
 	<script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="https://code.angularjs.org/1.4.3/angular-resource.min.js"></script>
 	<script src="/bower_components/underscore/underscore-min.js"></script>
@@ -24,11 +24,16 @@
 	<!-- global app.js -->	
 	<script src="/app/app.js"></script>
 
+	<!-- constants/values -->
+	<script src="/modules/constants/constants.js"></script>
+
 	<!-- services/factories -->
 	<script src="/factories/FormFactory.js"></script>
 	<script src="/factories/UserFactory.js"></script>
 	<script src="/factories/UnderscoreFactory.js"></script>
 	<script src="/factories/CookieFactory.js"></script>
+	<script src="/factories/AuthService.js"></script>
+	<script src="/services/SessionService.js"></script>
 	
 	<!-- controllers -->
 	<script src="/modules/home/home.js"></script>	
